fixing webpage overflow

--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 body {
     padding: 0;
     overflow-x: hidden;
-    margin: 0
+    margin: 0; 
+    width:auto;
 }
 
 * {
